Add "cyborg consciousness" as node and update index.html file.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technomancy Concepts And Resources</title>
+    <title>Technomancy Concepts And Resources Visualized</title>
+    <meta
+      name="description"
+      content="Interlinks ideas about technology, consciousness, cyberculture, magick and posthuman theory to explore how humans and machines co-evolve meaning, power and awareness in the global knowledge economy."
+    />
   </head>
   <body>
     <div id="root"></div>
