Add numerous entries and make minor CSS changes.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technomancy Concepts And Resources Visualized</title>
+    <title>Technomancy Visualized</title>
     <meta
       name="description"
-      content="Interlinks ideas about technology, consciousness, cyberculture, magick and posthuman theory to explore how humans and machines co-evolve meaning, power and awareness in the global knowledge economy."
+      content="Interlinks ideas about technology, consciousness, cyberculture and magick to explore how humans and machines co-evolve meaning, power and awareness in the global knowledge economy."
     />
   </head>
   <body>
