Add "ancestrofuturism" as concept node and include GA tracking code.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     />
     <meta name="author" content="Bret Bernhoft" />
   </head>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-YPZJ6VTYRQ"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-YPZJ6VTYRQ");
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
